improve: require Infra-Version header
